--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
-    <title></title>
+    <title>Word play</title>
   </head>
   <body>
-
+    <div class="container">
+      <h1>Word Play</h1>
+      <h2>Enter a phrase:</h2>
+        <form class="word-form">
+          <textarea id="subject" name="subject" placeholder="Write something.."></textarea>
+          <br>
+          <button class="submit" type="btn btn-danger">Submit</button>
+          <br>
+        </form>
+      <div class="output">
+        <p>Sample Test: <span class="subject1"></span><p>
+      </div>
   </body>
 </html>
